--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.4.0",
+    "aos": "^2.3.4",
+    "axios": "^1.5.0",
     "bootstrap": "^5.3.0",
     "eslint-config-next": "13.4.7",
     "hamburger-react": "^2.5.0",
+    "i18next": "^23.4.6",
     "js-cookie": "^3.0.5",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-audio-voice-recorder": "^2.1.2",
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^13.2.0",
     "react-icons": "^4.10.1",
     "react-multi-date-picker": "^4.1.2",
     "react-toastify": "^9.1.3",
